# Time-Crystal

./: README.md
contracts/: CrystalNFT.sol  GameLogic.sol  IERC677.sol  IGameLogic.sol  ITimeCrystal.sol  NewGame.sol  NewGamePlus.sol  README.md  TimeCrystal.sol  cards.txt  get_hand.js  randomSecret.sol  register_opponent.js  start_game.js  take_turn.js  test_decrypt.js  test_encrypt.js  test_send.js
godot/: 1v1.gd  1v1Board.tscn  3DBoard.tscn  3DClick.gd  Card.tscn  CardFlip.gd  CardFlip.tscn  CardGame.gd  CardGame.tscn  ConsoleBody.gd  Crystal.tscn  GlowCrystal.gd  GlowCrystal.tscn  MainScreen.gd  MainScreen.tscn  MainScreenButtons.gd  OptionsMenu.gd  OptionsMenu.tscn  Paramecium.tscn  ParameciumWiggle.gd  Player.gd  README.md  Rotate.gd  ShinyCrystal.gdshader  Test.gd  TickerTextLabel.gd  TileBlock.tscn  TimeCrystal.gdns  TitleScreen.gd  TitleScreen.tscn  TrickTaking.tscn  Vault.tscn  World.gd  World.tscn  crystal_spin.gd  time_crystal_library.gdnlib  world_rotate.gd
godot/rust/: Cargo.toml  TimeCrystal.json  lib.rs
