[package]
name = "time-crystal-rust"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
gdnative = { version = "0.11", features = ["async"] }
ethers = "2.0.4"
ethers-contract = "2.0.4"
tokio = { version = "1.28.1", features = ["full"] }
serde = "1.0.163"
serde_json = "1.0.96"
futures = "0.3.28"
hex = "0.4.3"
openssl = "0.10.52"
rand = "0.8"
